fixes header menu on mobile, sub headdings in it

--- a/header.less
+++ b/header.less
@@ -17,11 +17,11 @@ body > header {
 
   transition: transform 0.3s ease-out;
 
+
   html.scrolling-down &,
   &.video-playing {
     transform: translateY(-100%);
   }
-
 
 
   .left { 
@@ -98,6 +98,7 @@ body > header {
     display: block;
     height: 2em;
     width: 2em;
+    cursor: pointer;
   }
 
 
